test/Fail/Issue2944.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  bla₂ _54 .fst = 0 : Nat (blocked on _54)
  fst (blabla _41) = 1 : Nat (blocked on _41)
  bla pred _28 = 1 : Nat (blocked on _28)
  bla pred _23 = 0 : Nat (blocked on _23)

Issue2944.agda:38.8-61.25: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2944.agda:38.8-26
  Issue2944.agda:38.17-18
  Issue2944.agda:42.13-28
  Issue2944.agda:42.22-23
  Issue2944.agda:52.8-27
  Issue2944.agda:52.20-21
  Issue2944.agda:61.9-25
  Issue2944.agda:61.14-15
